<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".view.activity.ImagePickActivity"
    tools:showIn="@layout/activity_image_pick">

    <GridView
        android:padding="20dp"
        android:layout_margin="5dp"
        android:layout_weight="5"
        android:id="@+id/gvImages"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:numColumns="3" />

    <LinearLayout
        android:gravity="center"
        android:layout_weight="1"
        android:layout_gravity="center|bottom"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="0dp">

        <Button
            style="@style/select_image_button"
            android:id="@+id/btnFromServer"
            android:background="@drawable/button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/select_image_from_server" />

        <Button
            style="@style/select_image_button"
            android:id="@+id/btnFromCamera"
            android:background="@drawable/button2"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/select_image_from_camera" />

        <Button
            style="@style/select_image_button"
            android:id="@+id/btnFromAlbum"
            android:background="@drawable/button3"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/select_image_from_album" />
    </LinearLayout>
</LinearLayout>
